--- a/src/Winhance.UI/Features/Common/Controls/NavSidebar.xaml
+++ b/src/Winhance.UI/Features/Common/Controls/NavSidebar.xaml
@@ -3,6 +3,7 @@
     x:Class="Winhance.UI.Features.Common.Controls.NavSidebar"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:primitives="using:Microsoft.UI.Xaml.Controls.Primitives"
     xmlns:local="using:Winhance.UI.Features.Common.Controls">
 
     <Grid x:Name="SidebarGrid"
@@ -24,14 +25,14 @@
 
             <local:NavButton x:Name="SoftwareAppsButton"
                              IconPath="{StaticResource SoftwareAppsIconPath}"
-                             Text="Software &amp; Apps"
+                             Text="{x:Bind ViewModel.NavSoftwareAppsText, Mode=OneWay}"
                              NavigationTag="SoftwareApps"
                              IsCompact="{x:Bind IsCompact, Mode=OneWay}"
                              Clicked="NavButton_Clicked"/>
 
             <local:NavButton x:Name="OptimizeButton"
                              IconPath="{StaticResource OptimizeIconPath}"
-                             Text="Optimize"
+                             Text="{x:Bind ViewModel.NavOptimizeText, Mode=OneWay}"
                              NavigationTag="Optimize"
                              IsCompact="{x:Bind IsCompact, Mode=OneWay}"
                              Clicked="NavButton_Clicked"/>
@@ -39,7 +40,7 @@
             <local:NavButton x:Name="CustomizeButton"
                              IconPath="{StaticResource CustomizeIconPath}"
                              IconMargin="-3,0,0,0"
-                             Text="Customize"
+                             Text="{x:Bind ViewModel.NavCustomizeText, Mode=OneWay}"
                              NavigationTag="Customize"
                              IsCompact="{x:Bind IsCompact, Mode=OneWay}"
                              Clicked="NavButton_Clicked"/>
@@ -54,24 +55,76 @@
 
             <local:NavButton x:Name="AdvancedToolsButton"
                              IconGlyph="{StaticResource AdvancedToolsIconGlyph}"
-                             Text="Advanced Tools"
+                             Text="{x:Bind ViewModel.NavAdvancedToolsText, Mode=OneWay}"
                              NavigationTag="AdvancedTools"
                              IsCompact="{x:Bind IsCompact, Mode=OneWay}"
                              Clicked="NavButton_Clicked"/>
 
             <local:NavButton x:Name="SettingsButton"
                              IconGlyph="{StaticResource SettingsIconGlyph}"
-                             Text="Settings"
+                             Text="{x:Bind ViewModel.NavSettingsText, Mode=OneWay}"
                              NavigationTag="Settings"
                              IsCompact="{x:Bind IsCompact, Mode=OneWay}"
                              Clicked="NavButton_Clicked"/>
 
             <local:NavButton x:Name="MoreButton"
                              IconGlyph="{StaticResource MoreIconGlyph}"
-                             Text="More"
+                             Text="{x:Bind ViewModel.NavMoreText, Mode=OneWay}"
                              NavigationTag="More"
                              IsCompact="{x:Bind IsCompact, Mode=OneWay}"
-                             Clicked="NavButton_Clicked"/>
+                             Clicked="NavButton_Clicked">
+                <primitives:FlyoutBase.AttachedFlyout>
+                    <MenuFlyout x:Name="MoreMenuFlyout" Placement="RightEdgeAlignedBottom">
+                        <!-- Version Info (disabled, for display only) -->
+                        <MenuFlyoutItem x:Name="VersionMenuItem" IsEnabled="False">
+                            <MenuFlyoutItem.Icon>
+                                <FontIcon Glyph="&#xE946;"/>
+                            </MenuFlyoutItem.Icon>
+                        </MenuFlyoutItem>
+
+                        <MenuFlyoutSeparator/>
+
+                        <!-- Report a Bug -->
+                        <MenuFlyoutItem x:Name="ReportBugMenuItem" Click="MoreMenuItem_Click" Tag="ReportBug">
+                            <MenuFlyoutItem.Icon>
+                                <FontIcon Glyph="&#xEBE8;"/>
+                            </MenuFlyoutItem.Icon>
+                        </MenuFlyoutItem>
+
+                        <!-- Check for Updates -->
+                        <MenuFlyoutItem x:Name="CheckUpdatesMenuItem" Click="MoreMenuItem_Click" Tag="CheckUpdates">
+                            <MenuFlyoutItem.Icon>
+                                <FontIcon Glyph="&#xE896;"/>
+                            </MenuFlyoutItem.Icon>
+                        </MenuFlyoutItem>
+
+                        <MenuFlyoutSeparator/>
+
+                        <!-- Winhance Logs -->
+                        <MenuFlyoutItem x:Name="OpenLogsMenuItem" Click="MoreMenuItem_Click" Tag="OpenLogs">
+                            <MenuFlyoutItem.Icon>
+                                <FontIcon Glyph="&#xE8B7;"/>
+                            </MenuFlyoutItem.Icon>
+                        </MenuFlyoutItem>
+
+                        <!-- Winhance Scripts -->
+                        <MenuFlyoutItem x:Name="OpenScriptsMenuItem" Click="MoreMenuItem_Click" Tag="OpenScripts">
+                            <MenuFlyoutItem.Icon>
+                                <FontIcon Glyph="&#xE756;"/>
+                            </MenuFlyoutItem.Icon>
+                        </MenuFlyoutItem>
+
+                        <MenuFlyoutSeparator/>
+
+                        <!-- Close Winhance -->
+                        <MenuFlyoutItem x:Name="CloseAppMenuItem" Click="MoreMenuItem_Click" Tag="CloseApp">
+                            <MenuFlyoutItem.Icon>
+                                <FontIcon Glyph="&#xE711;"/>
+                            </MenuFlyoutItem.Icon>
+                        </MenuFlyoutItem>
+                    </MenuFlyout>
+                </primitives:FlyoutBase.AttachedFlyout>
+            </local:NavButton>
         </StackPanel>
     </Grid>
 </UserControl>
